--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -29,8 +29,9 @@
                     <StackPanel Orientation="Horizontal" Margin="0,100,0,0">
                         <Button Content="Translate" Height="71" Click="Button_Click" />
                         <Button Content="Speak" Name ="btnSpeak" Height="71" Click="btnSpeak_Click" />
-                        <Button Content="Learn" Name ="btnLearn" Height="71" />
+                        <Button Content="Learn" Name ="btnLearn" Height="71" Click="btnLearn_Click" />
                     </StackPanel>
+                    <Button Content="words list" Name ="btnWords" Height="71" Click="btnWords_Click" />
                 </StackPanel>
 
             </controls:PanoramaItem>
