--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -44,6 +44,7 @@
             <!--**********************************************************-->
             <!--progress-->
             <controls:PanoramaItem Header="progress">
+                <Button Content="Test" Click="Button_Click"></Button>
             </controls:PanoramaItem>
 
 
