move all graphics to separate folder

--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -54,8 +54,8 @@
     <!--Sample code showing usage of ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="False" Mode="Default">
-            <shell:ApplicationBarIconButton IconUri="/appbar_addword.png" Text="Add word" Click="ApplicationBarButtonAddWord_Click"/>
-            <shell:ApplicationBarIconButton IconUri="/appbar_wordslist.png" Text="Words list" Click="ApplicationBarButtonWordsList_Click"/>            
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar_addword.png" Text="Add word" Click="ApplicationBarButtonAddWord_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar_wordslist.png" Text="Words list" Click="ApplicationBarButtonWordsList_Click"/>            
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 </phone:PhoneApplicationPage>
