--- a/ManyWords/Views/MultichoiceTraining.xaml
+++ b/ManyWords/Views/MultichoiceTraining.xaml
@@ -15,7 +15,8 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True" 
-    local:TiltEffect.IsTiltEnabled="True" Loaded="PhoneApplicationPage_Loaded">
+    local:TiltEffect.IsTiltEnabled="False" 
+    Loaded="PhoneApplicationPage_Loaded">
 
     <phone:PhoneApplicationPage.Resources>
 
@@ -66,28 +67,15 @@
 
         <Grid x:Name="ContentPanel" Grid.Row="2" Margin="0,5,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Grid.Column="0" Name="txtWord" Text="{Binding Word.Text}" Margin="0,10,0,20"
-                       FontWeight="Bold" FontSize="36" HorizontalAlignment="Center" />
-            </Grid>
+            <local:AnswerChoiceControl x:Name="choiceControl" Grid.Row="0"/>
             
-            <ListBox Grid.Row="1" Name="lstAnswers" ItemsSource="{Binding Answers}" 
-                     ItemContainerStyle="{StaticResource ListBoxAnswersViewStyle}" Margin="0,0,0,0"/>
-
-            <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
                 <Button Name="btnNext" Content="Next" Click="btnNext_Click" />
-            </StackPanel>
-
-            
+            </StackPanel>            
         </Grid>
         
         <my:AdControl AdUnitId="Image480_80" Grid.Row="1" ApplicationId="test_client" Height="80" Name="adControl1" Width="480" />
