--- a/ManyWords/MainPage.xaml
+++ b/ManyWords/MainPage.xaml
@@ -6,56 +6,102 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:ManyWords.Views"
+    xmlns:local="clr-namespace:ManyWords"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="728"
     d:DataContext="{d:DesignData Model/TestData.xml}"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded">
+    shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded"
+    views:TiltEffect.IsTiltEnabled="True">
+
+
+    <phone:PhoneApplicationPage.Resources>
+
+        <local:ImageSourceConverter x:Key="imageSourceConverter"/>
+        
+        <Style TargetType="Button" x:Key="ActionButtonStyle">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border BorderThickness="1" BorderBrush="Transparent">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="0" Source="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" 
+                                       Margin="3,3,3,3"
+                                       VerticalAlignment="Center"
+                                       Stretch="Fill" />
+                                <TextBlock Grid.Column="1" Text="{TemplateBinding Content}"
+                                           VerticalAlignment="Center"                                           
+                                           
+                                           Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                            </Grid>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </phone:PhoneApplicationPage.Resources>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
- 
+
         <controls:Panorama Title="ManyWords">
 
+            <controls:Panorama.TitleTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}" 
+                           FontSize="100" Margin="0,50,0,0" />
+                </DataTemplate>
+            </controls:Panorama.TitleTemplate>
 
             <!--**********************************************************-->
             <!--trainings-->
-            <controls:PanoramaItem Header="training">
-                <!--Double line list with image placeholder and text wrapping-->
-                <ListBox Name="lstTrainings" Margin="0,0,-12,0" ItemsSource="{Binding Items}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Margin="0,0,0,17">
-                                
-                                <Rectangle Height="100" Width="100" Fill="#FFE5001b" Margin="12,0,9,0"/>
-                                <StackPanel Width="311">
-                                    <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                    <TextBlock Text="{Binding Status}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+            <controls:PanoramaItem Header="start">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Button Grid.Row="0" x:Name="buttonNewWord" Content="New Word" 
+                            Margin ="5,10,5,15" Height="80"                            
+                            Style="{StaticResource ActionButtonStyle}" Tag="/Images/AddWord.png"
+                            Click="ApplicationBarButtonAddWord_Click"/>
+
+                    <Button Grid.Row="1" x:Name="buttonTraining" Content="Training" 
+                            Margin ="5,5,5,5" Height="80" 
+                            Style="{StaticResource ActionButtonStyle}" Tag="/Images/Training.png"
+                            Click="Button_Click"/>
+
+                    <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+
+                    </StackPanel>
+                </Grid>
             </controls:PanoramaItem>
 
             <!--**********************************************************-->
             <!--progress-->
-            <controls:PanoramaItem Header="progress">
-                <Button Content="Test" Click="Button_Click"></Button>
+            <controls:PanoramaItem Header="vocabs">
+
             </controls:PanoramaItem>
 
 
         </controls:Panorama>
-        </Grid>
+    </Grid>
 
     <!--Sample code showing usage of ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="False" Mode="Default">
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="False" Mode="Minimized">
             <shell:ApplicationBarIconButton IconUri="/Images/appbar_addword.png" Text="Add word" Click="ApplicationBarButtonAddWord_Click"/>
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar_wordslist.png" Text="Words list" Click="ApplicationBarButtonWordsList_Click"/>            
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar_wordslist.png" Text="Words list" Click="ApplicationBarButtonWordsList_Click"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 </phone:PhoneApplicationPage>
